# cplusplus

./: README.md
c++11/: CMakeLists.txt  Makefile
c++11/include/: auto.h  auto.h~
c++11/src/: auto.cpp
c++11/test/: tc_auto.cpp  tc_auto.cpp~  tc_main.cpp  tc_main.cpp~
c++20/: .bazelrc  Makefile  README.md
c++20/endian/.cache/clangd/index/: endian.cpp.08E68BE9B7230CC6.idx
c++20/format/: meson.build
c++20/format/src/: format.cpp
c++20/memory/.cache/clangd/index/: format.cpp.11F5EAD2C429F3A2.idx
c++20/memory/src/: format.cpp
c++20/thread/: .bazelrc  Makefile  bazel-bin  bazel-out  bazel-testlogs  bazel-thread
c++20/thread/main/: BUILD  machine.cpp
endian/: meson.build
endian/src/: endian.cpp
